meecast (0.7.9) unstable; urgency=low

  * Added icon for openweathermap.com 
  * Fixed problem with foreca.com
  * Updated Russian, Dutch translations
  * Added Ukrain translation

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 16 Sep 2013 18:31:23 +0200

meecast (0.7.6) unstable; urgency=low

  * Added icon for openweathermap.com and gismeteo.ru
  * Added hourly forecast for openweathermap.org source 
  * Fixed problem with hourly forecast
  * Moved to new data structure in foreca.mobi converter
  * Added South Korea to foreca.com database
  * Added many stations to gismeteo.ru 
  * Updated Arabic, Catalan, Chinese(Taiwan), Chinese, Dutch, Finnish, Norwegian, Serbian, Spanish, Finish, French, Swedish, German, Portuguese

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 16 Sep 2013 18:31:23 +0200

meecast (0.7.5) unstable; urgency=low

  * Added icon for openweathermap.com
  * Fixed problem with current weather in foreca.com source
  * Updated Russian translations
  * Added Chinese(Taiwan), Chinese (Hong Kong) translations
  * Fixed problem with Chinese translation
  * Added translators of Spanish and Chines (Taiwan) 

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 12 Aug 2013 22:31:23 +0200


meecast (0.7.4) unstable; urgency=low

  * Added description strings and icon to gismeteo.ru 
  * Added icon for foreca.com
  * Fixed problem with updating
  * Added icon for openweathermap.org 
  * Added station Halikko, Finland to weather.com
  * Updated Catalan, Finish, Italian, Serbian, Norwegain, Chinese (Hong Kong) translations
  * Updated USA stations in foreca.com 

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 04 Aug 2013 15:31:23 +0200

meecast (0.7.3) unstable; urgency=low

  * Added new source Openwethermap.org
  * Added description string for weather.com
  * Fixed problem with Catalan language
  * Added Llagostera, Spain to weather.com source
  * Updated Arabic, Catalan, Finish, Italian, Serbian, Russian translations
  * Added station Vittskovle (Sweden) to weather.com
  * Fixed problem with Map  