@@ -3,9 +3,9 @@
 <name>weather.com</name>
 <logo>weather.com.png</logo>
 <base>weather.com.db</base>
-<forecast url="http://xml.weather.com/weather/local/%s?cm_ven=1CW&amp;site=wx.com-bar&amp;cm_ite=wx-cc&amp;par=1CWFFv1.1.9&amp;cm_pla=wx.com-bar&amp;cm_cat=FFv1.1.9&amp;unit=m&amp;dayf=9&amp;cc=*" />
+<forecast url="http://wxdata.weather.com/wxdata/weather/local/%s?cm_ven=1CW&amp;site=wx.com-bar&amp;cm_ite=wx-cc&amp;par=1CWFFv1.1.9&amp;cm_pla=wx.com-bar&amp;cm_cat=FFv1.1.9&amp;unit=m&amp;dayf=9&amp;cc=*" />
 <forecast_backup url="http://www.weather.com/weather/tenday/%s" />
-<detail url="http://xml.weather.com/weather/local/%s?cm_ven=1CW&amp;site=wx.com-bar&amp;cm_ite=wx-cc&amp;par=1CWFFv1.1.9&amp;cm_pla=wx.com-bar&amp;cm_cat=FFv1.1.9&amp;unit=m&amp;hbhf=12" />
+<detail url="http://wxdata.weather.com/wxdata/weather/local/%s?cm_ven=1CW&amp;site=wx.com-bar&amp;cm_ite=wx-cc&amp;par=1CWFFv1.1.9&amp;cm_pla=wx.com-bar&amp;cm_cat=FFv1.1.9&amp;unit=m&amp;hbhf=12" />
 <search url="http://xml.weather.com/search/search?where=%s" />
 <library>libomweather-weather-com-source.so</library>
 <binary>/opt/com.meecast.omweather/lib/weathercom</binary>
